src/objects/MShX__c.object
<CustomObject>
    <fields>
        <fullName>BBB__c</fullName>
        <label>BBB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KKK__c</fullName>
        <label>KKK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MShOneMoreField__c</fullName>
        <label>MShOneMoreField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MShSomeField__c</fullName>
        <label>MShSomeField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSS__c</fullName>
        <label>SSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MShX</label>
    <nameField>
        <label>MShX Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MShXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>